--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
     "node": ">8.0.0"
   },
   "scripts": {
-    "prepublish": "tsc --p . && tsc --p tsconfig-sw.json && npm run sass && cpx 'dist/*.{css,js}' viewer/",
-    "sass": "node-sass --source-map true src/styles/sass/ -o dist/",
+    "prepublish": "tsc --p . && tsc --p tsconfig-sw.json && npm run sass && cpx 'dist/*.{css,js,css.map,js.map}' viewer/",
+    "sass": "sass --source-map src/styles/sass:dist",
     "test": "rimraf lib && tsc --p tsconfig-test.json && mocha --require jsdom-global/register --recursive lib/test",
-    "visual-test": "backstop test",
-    "visual-test:init": "backstop reference",
-    "visual-test:update": "backstop approve",
-    "examples": "rimraf examples/static/viewer examples/streamed/readers/reader-JBKS && cpx 'viewer/*.{html,css,js}' examples/static/viewer && cpx 'viewer/*.{html,css,js}' examples/streamed/readers/reader-JBKS && cpx 'viewer/*.{css,js}' examples/embedded/alice",
+    "examples": "rimraf examples/static/viewer examples/streamed/readers/reader-JBKS && cpx 'viewer/*.{html,css,js,css.map,js.map}' examples/static/viewer && cpx 'viewer/*.{html,css,js,css.map,js.map}' examples/streamed/readers/reader-JBKS && cpx 'viewer/*.{css,js,css.map,js.map}' examples/embedded/alice",
     "static": "node \"./examples/static/static-server.js\"",
     "streamed": "node \"./examples/streamed/server/server-cli.inlinesourcemap.js\" ./examples/streamed/epubs/",
     "embedded": "node \"./examples/embedded/embedded-server.js\"",
@@ -45,9 +42,9 @@
     "jsdom": "^9.8.3",
     "jsdom-global": "^2.1.0",
     "mocha": "^5.2.0",
-    "node-sass": "^4.9.3",
     "requirejs": "^2.3.2",
     "rimraf": "^2.6.2",
+    "sass": "^1.56.1",
     "sinon": "^6.0.1",
     "typescript": "^2.9.2"
   }
